<resources>
    <string name="app_name">SpacexMissions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="useful_links">Useful Links</string>
    <string name="article_link">Article Link</string>
    <string name="ship_type">Ship Type</string>
    <string name="home_port">Home Port</string>
    <string name="mission_patch">Mission Patch</string>
    <string name="reddit_campaign">reddit Campaign</string>
    <string name="reddit_launch">reddit Launch</string>
    <string name="wikipedia">wikipedia</string>
    <string name="video_link">video link</string>
    <string name="missions">Missions</string>
    <string name="button_back">button back</string>
    <string name="launch_year">Launch Year</string>
    <string name="links">links</string>
    <string name="_3_2">3/2</string>
    <string name="_1x">+1x</string>
    <string name="increase_speed">increase speed</string>
    <string name="undo">undo</string>
    <string name="play">play</string>
    <string name="all_missions">All Missions</string>

    <string-array name="select_speed">
        <item>1x</item>
        <item>2x</item>
        <item>3x</item>
        <item>4x</item>
        <item>5x</item>
    </string-array>
</resources>