<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.slideShow.ShipsFragment">


    <com.asksira.loopingviewpager.LoopingViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:autoScroll="true"
        app:isInfinite="true"
        app:layout_constraintDimensionRatio="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:scrollInterval="6000" />

    <TextView
        android:id="@+id/pageNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="170dp"
        android:text="@string/_3_2"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llPlayerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/viewPager">

        <ImageButton
            android:id="@+id/btnUndo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_undo_circular_arrow"
            android:contentDescription="@string/undo" />

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_pause"
            android:contentDescription="@string/play" />


        <ImageButton
            android:id="@+id/btnIncreaseSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_fast_forward"
            android:contentDescription="@string/increase_speed" />


        <TextView
            android:id="@+id/tvIncrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/_1x"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>