<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/useful_links"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnCloseDialog"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnCloseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/tvTittle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTittle"
        app:layout_constraintTop_toTopOf="@+id/tvTittle"
        app:srcCompat="@drawable/ic_cancel" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle">

        <TextView
            android:id="@+id/tvTittleArticleLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article_link"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvArticleLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:text="@string/article_link" />

        <TextView
            android:id="@+id/tvTitleMissionPatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video_link"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvMissionPatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:text="@string/article_link" />

     <!--   <TextView
            android:id="@+id/tvTittleRedditCampaign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reddit_campaign"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvRedditCampaign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:text="reddit Campaign" />-->


       <!-- <TextView
            android:id="@+id/tvTittleRedditLaunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/reddit_launch"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/redditLaunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:text="reddit Campaign" />-->



        <TextView
            android:id="@+id/tvTittleWikipedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wikipedia"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvWikipedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            tools:text="reddit Campaign" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>